[package]
name = "web_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.18.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.16", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
dotenv = "0.15.0"
